--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
 	"type": "git",
 	"url": "https://github.com/asim-qureshi/Typewriter.js"
   },
-  "keywords": {
-	"type animation"
-  },
+  "keywords": "type animation",
   "dependencies": {
 	  "jquery": "~2.1.4"
   },
